k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: icecast
  labels:
    name: icecast
    app: icecast
spec: {}
