k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icecast-deployment
  namespace: icecast-ns
  labels:
    app: icecast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icecast
  template:
    metadata:
      labels:
        app: icecast
    spec:
      containers:
        - name: icecast-container
          image: libretime/icecast:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            # Montar el ConfigMap en una ruta que Icecast pueda leer directamente
            - name: icecast-config-volume
              mountPath: /etc/icecast2/icecast.xml # Ruta donde Icecast espera su config
              subPath: icecast.xml # Nombre del archivo dentro del ConfigMap
              readOnly: true # Es importante que sea read-only si Icecast no necesita modificarlo
            # Montar el volumen de logs en la ruta ESPERADA por Icecast
            - name: icecast-logs-storage
              mountPath: /usr/local/icecast/logs # Asegúrate de que esta es la ruta interna de los logs
          # Comando para iniciar Icecast, apuntando al archivo de configuración
          # Esto evita que el entrypoint de la imagen intente modificar /etc/icecast.xml
          command: ["icecast2", "-c", "/etc/icecast2/icecast.xml"]
      volumes:
        - name: icecast-config-volume
          configMap:
            name: icecast-config
        - name: icecast-logs-storage
          persistentVolumeClaim:
            claimName: icecast-logs-pvc
